# KMU-assignement_4

./: CMakeLists.txt  README.md
Documention/: main.md
include/: generalInclude.hpp
lib/: main.cpp
lib/Figure/: Axis.hpp  IGLObject.hpp
lib/Figure/Object/: Object2D.cpp  Object2D.hpp  Object3D.cpp  Object3D.hpp
lib/Figure/Point/: Point2D.cpp  Point2D.hpp  Point3D.cpp  Point3D.hpp
source/: main.cpp
